# RockTranslate

./: .gitignore  1_PDFsam_Nsangou Ngapna et al._ASR_2024_raw.html  1_PDFsam_Nsangou Ngapna et al._ASR_2024_workspace.html  2_PDFsam_5_PDFsam_Nsangou Ngapna et al._ASR_2024.html  5_PDFsam_Nsangou Ngapna et al._ASR_2024_raw.html  5_PDFsam_Nsangou Ngapna et al._ASR_2024_workspace.html  LICENSE  README.md  RockTranslate.spec  batches_view.html  compile_translations.py  extract_to_html.py  extract_translations.py  extraction_validation.html  main.py  poc_injection.py  poc_inspect_page1.py  poc_page_1.html  poc_page_11.html  poc_page_3.html  poc_page_5.html  poc_page_9.html  poc_render.py  pyproject.toml  requirements-gui.txt  requirements.txt  setup.py  smart_pdf_test_3.py  tables.html  test.py  test_analyzer.py  test_batches.py  test_cid_normalizer.py  test_formula_detector.py  test_graphics_pipeline.py  test_hybrid_parser.py  test_piste_b_traduit_fr.html  test_pymupdf.py  test_split_viewer.py  test_table.html  (+4 more)
dev_tools/: build_app.py  compile_translations.py  extract_translations.py  installer.iss  translate_ts_files.py
docs/: app.js  index.html  style.css
rocktranslate_output/: page.tex
src/cli/: cli.py
src/core/: cid_normalizer.py  constants.py  domain.py  fitz_extractor.py  formula_detector.py  html_transformer.py  pdf_extractor.py  reading_order.py  spatial_clusterer.py  table_detector.py
src/reconstruction/: html_builder.py  latex_builder.py  (+1 more)
tests/: debug_extractor.py  test_spatial_clusterer.py  visual_debugger.py
tests_latex/: test_latex_reconstruction.py
(+136 files in other folders)
